--- a/index.html
+++ b/index.html
@@ -14,17 +14,29 @@
       <legend>Are you developing for web browsers or for a desktop?</legend>
       <input data-preference="2" data-next="0" type="radio" name="web-or-desk-pref" id="q1-radio1">
       <label for="q1-radio1">A web browser</label>
-      <input data-next="5" type="radio" name="web-or-desk-pref" id="q1-radio2">
+      <input data-next="2" type="radio" name="web-or-desk-pref" id="q1-radio2">
       <label for="q1-radio2">A desktop</label>
     </fieldset>
-    
-    <!-- last question for desktop: do you liek manual gc? (i.e. freeing memory when done with it) -->
+
+    <!-- unknown question 5 -->
     <fieldset id="question-5" class="hidden">
+      <legend>idk</legend>
+      <!-- IE i could also use my knowledge to create games? -->
+      <input data-preference="1" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio1">
+      <label for="q5-radio1">Game Development</label>
+      <input data-preference="4" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio2">
+      <label for="5-radio2">Easy to learn</label>
+      <input data-preference="5" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio3">
+      <label for="q5-radio3">idk</label>
+    </fieldset>
+
+    <!-- do you liek manual gc? (i.e. freeing memory when done with it) -->
+    <fieldset id="question-2" class="hidden">
       <legend>Which memory management scheme do you prefer?</legend>
-      <input data-preference="3" data-next="0" type="radio" name="gc-pref" value="1" id="q5-radio1">
-      <label for="g5-radio1">Manual deletion</label>
-      <input data-preference="1" data-next="0" type="radio" name="gc-pref" value="2" id="q5-radio2">
-      <label for="q5-radio2">Automatic garbage collection</label>
+      <input data-preference="3" data-next="0" type="radio" name="gc-pref" value="1" id="q2-radio1">
+      <label for="g2-radio1">Manual deletion</label>
+      <input data-next="5" type="radio" name="gc-pref" value="2" id="q2-radio2">
+      <label for="q2-radio2">Automatic garbage collection</label>
     </fieldset>
   </form>
   <br>
