--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <legend>Are you developing for web browsers or for a desktop?</legend>
       <input data-preference="2" data-next="0" type="radio" name="web-or-desk-pref" id="q1-radio1">
       <label for="q1-radio1">A web browser</label>
-      <input data-next="2" type="radio" name="web-or-desk-pref" id="q1-radio2">
+      <input data-next="3" type="radio" name="web-or-desk-pref" id="q1-radio2">
       <label for="q1-radio2">A desktop</label>
     </fieldset>
 
@@ -30,16 +30,32 @@
       <label for="q5-radio3">idk</label>
     </fieldset>
 
+    <!-- what engine features -->
+    <fieldset id="question-4" class="hidden">
+      <legend>Which kind of desktop program?</legend>
+      <input data-next="5" type="radio" name="gc-pref" value="1" id="q2-radio1">
+      <label for="g2-radio1">A Game</label>
+      <input data-next="5" type="radio" name="gc-pref" value="2" id="q2-radio2">
+      <label for="q2-radio2">An App</label>
+    </fieldset>
+
+    <fieldset id="question-3" class="hidden">
+      <legend>Which kind of desktop program?</legend>
+      <input data-next="5" type="radio" name="gc-pref" value="1" id="q2-radio1">
+      <label for="g2-radio1">A Game</label>
+      <input data-next="5" type="radio" name="gc-pref" value="2" id="q2-radio2">
+      <label for="q2-radio2">An App</label>
+    </fieldset>
+
     <!-- do you liek manual gc? (i.e. freeing memory when done with it) -->
     <fieldset id="question-2" class="hidden">
       <legend>Which memory management scheme do you prefer?</legend>
       <input data-preference="3" data-next="0" type="radio" name="gc-pref" value="1" id="q2-radio1">
       <label for="g2-radio1">Manual deletion</label>
-      <input data-next="5" type="radio" name="gc-pref" value="2" id="q2-radio2">
+      <input data-next="3" type="radio" name="gc-pref" value="2" id="q2-radio2">
       <label for="q2-radio2">Automatic garbage collection</label>
     </fieldset>
     <button id="next-button" type="button">&puncsp;Next&puncsp;</button>
-    <br>
     <div id="results-show" class="hidden">It seems that you may like <span></span></div>
   </form>
 
