correct grammar on results

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <label for="q2-radio2">An App</label>
     </fieldset>
 
-    <!-- do you liek manual gc? (i.e. freeing memory when done with it) -->
+    <!-- manual gc? (i.e. freeing memory when done with it) -->
     <fieldset id="question-2" class="hidden">
       <legend>Which memory management scheme do you prefer?</legend>
       <input data-preference="3" data-next="0" type="radio" name="gc-pref" value="1" id="q2-radio1">
@@ -56,7 +56,7 @@
       <label for="q2-radio2">Automatic garbage collection</label>
     </fieldset>
     <button id="next-button" type="button">&puncsp;Next&puncsp;</button>
-    <div id="results-show" class="hidden">It seems that you may like <span></span></div>
+    <div id="results-show" class="hidden">It seems that you would like <span></span></div>
   </form>
 
 </body>
