--- a/index.html
+++ b/index.html
@@ -12,31 +12,20 @@
     <!-- web or desktop? -->
     <fieldset id="question-1">
       <legend>Are you developing for web browsers or for a desktop?</legend>
+      <!-- we only know of one, not counting WebASM -->
       <input data-preference="2" data-next="0" type="radio" name="web-or-desk-pref" id="q1-radio1">
       <label for="q1-radio1">A web browser</label>
       <input data-next="3" type="radio" name="web-or-desk-pref" id="q1-radio2">
       <label for="q1-radio2">A desktop</label>
     </fieldset>
 
-    <!-- unknown question 5 -->
-    <fieldset id="question-5" class="hidden">
-      <legend>idk</legend>
-      <!-- IE i could also use my knowledge to create games? -->
-      <input data-preference="1" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio1">
-      <label for="q5-radio1">Game Development</label>
-      <input data-preference="4" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio2">
-      <label for="5-radio2">Easy to learn</label>
-      <input data-preference="5" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio3">
-      <label for="q5-radio3">idk</label>
-    </fieldset>
-
-    <!-- pointers, or lack thereof -->
-    <fieldset id="question-4" class="hidden">
-      <legend>Do you want pointers?</legend>
-      <input data-preference="5" data-next="0" type="radio" name="gc-pref" value="1" id="q4-radio1">
-      <label for="g2-radio1">Yes</label>
-      <input data-next="5" type="radio" name="gc-pref" value="2" id="q4-radio2">
-      <label for="q2-radio2">No</label>
+    <!-- manual gc? (i.e. freeing memory when done with it) -->
+    <fieldset id="question-2" class="hidden">
+      <legend>Which memory management scheme do you prefer?</legend>
+      <input data-next="5" type="radio" name="gc-pref" value="1" id="q2-radio1">
+      <label for="g2-radio1">Manual deletion</label>
+      <input data-next="4" type="radio" name="gc-pref" value="2" id="q2-radio2">
+      <label for="q2-radio2">Automatic garbage collection</label>
     </fieldset>
 
     <fieldset id="question-3" class="hidden">
@@ -47,14 +36,27 @@
       <label for="q2-radio2">An App</label>
     </fieldset>
 
-    <!-- manual gc? (i.e. freeing memory when done with it) -->
-    <fieldset id="question-2" class="hidden">
-      <legend>Which memory management scheme do you prefer?</legend>
-      <input data-preference="3" data-next="0" type="radio" name="gc-pref" value="1" id="q2-radio1">
-      <label for="g2-radio1">Manual deletion</label>
-      <input data-next="4" type="radio" name="gc-pref" value="2" id="q2-radio2">
-      <label for="q2-radio2">Automatic garbage collection</label>
+    <!-- pointers, or lack thereof -->
+    <fieldset id="question-4" class="hidden">
+      <legend>Do you want pointers?</legend>
+      <input data-preference="1" data-next="0" type="radio" name="gc-pref" value="1" id="q4-radio1">
+      <label for="g2-radio1">Yes</label>
+      <input data-next="5" type="radio" name="gc-pref" value="2" id="q4-radio2">
+      <label for="q2-radio2">No</label>
     </fieldset>
+    
+    <!-- unknown question 5 -->
+    <fieldset id="question-5" class="hidden">
+      <legend>idk</legend>
+      <input data-preference="1" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio1">
+      <label for="q5-radio1">one</label>
+      <input data-preference="4" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio2">
+      <label for="5-radio2">two</label>
+      <input data-preference="5" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio3">
+      <label for="q5-radio3">three</label>
+    </fieldset>
+
+
     <button id="next-button" type="button">&puncsp;Next&puncsp;</button>
     <div id="results-show" class="hidden">It seems that you would like <span></span></div>
   </form>
