--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
       <legend>Do you want pointers?</legend>
       <input data-preference="1" data-next="0" type="radio" name="gc-pref" value="1" id="q4-radio1">
       <label for="g2-radio1">Yes</label>
-      <input data-next="5" type="radio" name="gc-pref" value="2" id="q4-radio2">
+      <input data-preference="5" data-next="0" type="radio" name="gc-pref" value="2" id="q4-radio2">
       <label for="q2-radio2">No</label>
     </fieldset>
-    
+
     <!-- unknown question 5 -->
     <fieldset id="question-5" class="hidden">
-      <legend>idk</legend>
+      <legend>In your engine, what would you want? </legend>
+      <!-- which is used by Unity -->
       <input data-preference="1" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio1">
-      <label for="q5-radio1">one</label>
-      <input data-preference="4" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio2">
-      <label for="5-radio2">two</label>
-      <input data-preference="5" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio3">
-      <label for="q5-radio3">three</label>
+      <label for="q5-radio1">More modularity</label>
+      <!-- which is used by UE4/5. -->
+      <input data-preference="3" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio2">
+      <label for="5-radio2">More out-of-the-box tools</label>
+      <!-- <input data-preference="5" data-next="0" type="radio" name="web-or-desk-pref" id="q5-radio3">
+      <label for="q5-radio3">three</label> -->
     </fieldset>
 
 
