make the button also reset the survey

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </fieldset>
 
 
-    <button id="next-button" type="button">&puncsp;Next&puncsp;</button>
+    <button id="next-button" type="button">Next</button>
     <div id="results-show" class="hidden">It seems that you would like <span></span></div>
   </form>
 
